# lsb_steganography

./: CMakeLists.txt  README.md  Steg_header.h  common.h  decode.c  decode.h  encode.c  encode.h  lsb_steg  main  main.c  secret.txt  types.h
